syntax = "proto3";
package tendermint.proto.privval;

option go_package = "github.com/tendermint/tendermint/proto/privval";

import "third_party/proto/gogoproto/gogo.proto";
import "proto/crypto/keys/types.proto";

// FilePVKey stores the immutable part of PrivValidator.
message FilePVKey {
  bytes                                   address  = 1;
  tendermint.proto.crypto.keys.PublicKey  pub_key  = 2 [(gogoproto.nullable) = false];
  tendermint.proto.crypto.keys.PrivateKey priv_key = 3 [(gogoproto.nullable) = false];

  string file_path = 4;
}

// FilePVLastSignState stores the mutable part of PrivValidator.
message FilePVLastSignState {
  int64 height     = 1;
  int64 round      = 2;
  int32 step       = 3;
  bytes signature  = 4;
  bytes sign_bytes = 5;

  string file_path = 6;
}
